tests/errors/_questions/generated_errors/init_not_struct/init_int.c
int main()
{
	int a = {1, 2};
	// fg
	return 0;
}